# iot-bee

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  notas
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
crates/adapters/src/actor_system/pipeline_actor_module/: general_messages.rs  general_ports.rs  mod.rs
crates/adapters/src/actor_system/pipeline_actor_module/consumer_actor/: data_consumer_actor.rs  handlers.rs
crates/adapters/src/actor_system/pipeline_actor_module/processor_actor/: data_processor_actor.rs  handlers.rs  messages.rs
crates/adapters/src/actor_system/pipeline_actor_module/store_actor/: data_store_actor.rs  handlers.rs  messages.rs  mod.rs
crates/adapters/src/actor_system/supervisor_actor_system/: actor_wrapper.rs  handlers.rs  messages.rs  mod.rs  system_message_handler.rs  system_supervisor.rs
crates/adapters/src/actor_system/supervisor_pipeline_life_time/: actor_wrapper.rs  handlers.rs  messges.rs  mod.rs  pipeline_abstraction.rs  pipeline_supervisor.rs
crates/adapters/src/api/: api_docs.rs  error.rs  mod.rs
crates/adapters/src/api/connection_types/: models.rs  routers.rs
crates/adapters/src/api/data_sources/: models.rs  routers.rs
crates/adapters/src/api/data_store/: models.rs  routers.rs
crates/adapters/src/api/pipeline_data/: models.rs  routers.rs
crates/adapters/src/api/pipeline_groups/: models.rs  routers.rs
crates/adapters/src/api/validation_schemas/: models.rs  routers.rs
crates/adapters/tests/: data_store_api.rs  pipeline_integration.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/connection_types_cases/: cases.rs
crates/application/src/data_sources_cases/: cases.rs
crates/application/src/data_store_cases/: cases.rs
crates/application/src/groups_cases/: cases.rs
crates/application/src/pipeline_data_cases/: cases.rs
crates/application/src/validation_schemas_cases/: cases.rs
crates/application/tests/: data_store_use_cases.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  lib.rs  mod.rs
crates/domain/src/ast/: ast.rs  compiler.rs  mod.rs  processor.rs  schemas.rs  vm.rs
crates/domain/src/entities/: connection_type.rs  data_consumer_types.rs  data_source.rs  data_store.rs  mod.rs  pipeline_data.rs  pipeline_groups.rs  validation_schema.rs
crates/domain/src/inbound/: mod.rs  pipeline_lifecycle.rs
crates/domain/src/outbound/: data_external_store.rs  data_processor_actions.rs  data_source.rs  pipeline_persistence.rs
crates/domain/src/pipeline_schema/: mod.rs  schemas.rs
crates/domain/src/value_objects/: mod.rs  pipelines_values.rs
crates/domain/tests/: domain_value_objects.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/data_processor/: README.md  ast.rs  compiler.rs  data_process.rs  mod.rs  schemas.rs  vm.rs
crates/infrastructure/src/data_source/: mod.rs  rabbitmq_data_source.rs
crates/infrastructure/src/persistence/: connection.rs  dto_transformers.rs  mod.rs  models.rs
crates/infrastructure/src/persistence/repositories/: connection_types_repository.rs  data_source_repository.rs  data_store_repository.rs  groups_repository.rs  mod.rs  pipeline_data_repository.rs  validation_schemas_repository.rs
crates/infrastructure/test/: data_processor.rs  data_store_repository.rs
crates/logging/: Cargo.toml
migrations/: 0002_add_unique_constraint_to_json_name.sql  0003_alter_validation_schemas_table.sql  0004_data_source_schema_table.sql  0005_refactor_pipelines_remove_config_add_validation_schema.sql  0006_refactor_pipeline_and_database_ids.sql  0007_refactor_pipeline_relations_to_integer.sql  0008_fix_database_group_and_pipeline_fk_types.sql  0009_restructure_databases_table.sql  0010_add_description_to_databases_table.sql  0011_make_pipeline_name_text_unique.sql  001_initial.sql
src/: config.rs  lib.rs  logging.rs  main.rs
src/adapters/: api_docs.rs  mod.rs
src/adapters/actor_system/: mod.rs
src/adapters/actor_system/pipeline_actor_module/: general_messages.rs  general_ports.rs  mod.rs
src/adapters/actor_system/supervisor_actor_system/: actor_wrapper.rs  handlers.rs  messages.rs  mod.rs  system_message_handler.rs  system_supervisor.rs
src/adapters/actor_system/supervisor_pipeline_life_time/: actor_wrapper.rs  handlers.rs  messges.rs  mod.rs  pipeline_abstraction.rs  pipeline_supervisor.rs
src/adapters/api/: api_docs.rs  error.rs  mod.rs
src/adapters/api/connection_types/: dto_transformers.rs  mod.rs  models.rs  routers.rs
src/adapters/api/data_sources/: models.rs  routers.rs
src/application/: mod.rs
src/application/connection_types_cases/: cases.rs
src/application/data_sources_cases/: cases.rs
src/application/data_store_cases/: cases.rs
src/application/groups_cases/: cases.rs
src/application/pipeline_data_cases/: cases.rs
src/application/validation_schemas_cases/: cases.rs  mod.rs  validation_entities.rs
src/composition/: mod.rs
src/composition/api_composition/: api_composer.rs  mod.rs
src/domain/: error.rs  mod.rs
src/domain/entities/: connection_type.rs  data_consumer_types.rs  data_source.rs  data_store.rs  mod.rs  pipeline.rs  pipeline_data.rs  pipeline_groups.rs  validation_schema.rs
src/domain/inbound/: mod.rs  pipeline_inbound.rs  pipeline_lifecycle.rs
src/domain/outbound/: data_external_store.rs  data_processor_actions.rs  data_source.rs  mod.rs  pipeline_lifecycle.rs  pipeline_persistence.rs
src/domain/value_objects/: mod.rs  pipelines_values.rs
src/infrastructure/: mod.rs
src/infrastructure/data_external_persistence/: data_store.rs
src/infrastructure/data_processor/: mod.rs
src/infrastructure/data_source/: mod.rs  rabbitmq_data_source.rs
src/infrastructure/persistence/: connection.rs  dto_transformers.rs  mod.rs  models.rs
test/: actor_system_test.rs  data_store_api.rs  data_store_repository.rs  data_store_use_cases.rs  domain_value_objects.rs  pipeline_integration.rs  store_actor.rs  supervisor_actor.rs
tests/: actor_system_test.rs  store_actor.rs  supervisor_actor.rs
(+33 files in other folders)
