[package]
name = "iot-bee"
version = "0.1.0"
edition = "2024"
authors = ["Manuel Manjarres Rivera"]


[dependencies]

# Async runtime 
actix = "0.13.5"
actix-rt = "2.11.0"
actix-web = "4.13.0"
async-trait = "0.1.89"

# Serialization 
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
toml = "1.1.2"


#Data Base 

# Messaging 

# Validation 
validator = { version = "0.20.0", features = ["derive"] }

# Documentation
utoipa = { version = "5", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

# Logging and monitoring
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

# Error handling

#utilities 
uuid = { version = "1.23.0", features = ["v4","serde"] }
dotenv = "0.15.0"
thiserror = "2.0.18"
chrono = {version= "0.4.44", features = ["serde"]}
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
lapin = "4.4.0"
futures-util = "0.3.31"

 
