[package]
name = "adapters"
version = "0.1.0"
edition = "2024"

[dependencies]
domain         = { path = "../domain" }
application    = { path = "../application" }
infrastructure = { path = "../infrastructure" }
logging        = { path = "../logging" }
actix          = { workspace = true }
actix-rt       = { workspace = true }
actix-web      = { workspace = true }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
utoipa         = { workspace = true }
utoipa-swagger-ui = { workspace = true }
thiserror      = { workspace = true }
uuid           = { workspace = true }
futures-util   = { workspace = true }
async-trait     = { workspace = true }
chrono         = { workspace = true }
validator      = { workspace = true }
schemars       = { workspace = true }

