[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
serde       = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
validator   = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true }