[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
domain      = { path = "../domain" }
logging    = { path = "../logging" }
sqlx        = { workspace = true }
tokio       = { workspace = true }
lapin       = { workspace = true }
futures-util = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
actix-rt = { workspace = true }
actix-web = { workspace = true }
chrono = { workspace = true }
